--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Services | Real Estate by Malav</title>
-  <link rel="icon" href="..\images\Malav.ico">
+  <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -47,7 +47,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <!--**************************************************** BODY **********************************************************-->
@@ -89,7 +89,7 @@
     <nav class="navbar fixed-top navbar-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
-          <img src="..\..\images\Malav_Logo.png" alt="logo" style="width:200px;">
+          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -157,13 +157,13 @@
       <div class="row justify-content-center">
         <div class="col-lg-4">
           <h2>Buy & Sell</h2>
-          <img class="buy-sell" src="..\images\buy-sell.jpg" alt="buy-sell-pic">
+          <img class="buy-sell" src="images\buy-sell.jpg" alt="buy-sell-pic">
           <p>“Owning a home is a keystone of wealth… both financial affluence and emotional security.”
             –Suze Orman</p>
         </div>
         <div class="col-lg-4">
           <h2>Lease</h2>
-          <img class="lease" src="..\images\lease.jpg" alt="lease-pic" style="text-align:right" ;>
+          <img class="lease" src="images\lease.jpg" alt="lease-pic" style="text-align:right" ;>
           <p>“A man travels the world over in search of what he needs and returns home to find it.”
             –George A. Moore</p>
         </div>
@@ -172,14 +172,14 @@
       <div class="row justify-content-center">
         <div class="col-lg-4">
           <h2>Commercial</h2>
-          <img class="commercial" src="..\images\commercial.jpg" alt="commercial-pic">
+          <img class="commercial" src="images\commercial.jpg" alt="commercial-pic">
           <p> “It’s not about the money, though that’s nice to have.
             At the end of the day, it’s really about matching the right buyer to the right seller.
             We’re matchmakers—real estate matchmakers.” –Valerie Fitzgerald,</p>
         </div>
         <div class="col-lg-4">
           <h2>Invest</h2>
-          <img class="invest" src="..\images\invest.jpg" alt="invest-pic">
+          <img class="invest" src="images\invest.jpg" alt="invest-pic">
           <p>“Real Estate provides the highest returns, the greatest values, and the least risk.”
             –Armstrong Williams</p>
         </div>
