--- a/buying_tips.html
+++ b/buying_tips.html
@@ -6,5 +6,5 @@
 </head>
 
 <body>
-  <img src="..\images\Digital_BC.png" class="img-fluid" alt="digital_business_card">
+  <img src="images\Digital_BC.png" class="img-fluid" alt="digital_business_card">
 </body>
