--- a/hire_me.html
+++ b/hire_me.html
@@ -31,7 +31,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About | Real Estate by Malav</title>
-  <link rel="icon" href="..\images\Malav.ico">
+  <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
@@ -46,7 +46,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Including CSS file at the bottom so that it takes preceedence over bootstrap styling -->
-  <link rel="stylesheet" type="text/css" href="../css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
 <!--**************************************************** BODY **********************************************************-->
@@ -88,7 +88,7 @@
     <nav class="navbar fixed-top navbar-light navbar-expand-lg">
       <div class="container-fluid">
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
-          <img src="..\images\Malav_Logo.png" alt="logo" style="width:200px;">
+          <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -97,19 +97,19 @@
         <div class="collapse navbar-collapse justify-content-lg-end pe-2" id="navbarSupportedContent">
           <ul class="navbar-nav d-flex align-items-center">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">Home</a>
+              <a class="nav-link" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="../about.html">About</a>
+              <a class="nav-link active" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../services.html">Services</a>
+              <a class="nav-link" href="services.html">Services</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../social_media.html">Social Media</a>
+              <a class="nav-link" href="social_media.html">Social Media</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../contact.html">Contact Us</a>
+              <a class="nav-link" href="contact.html">Contact Us</a>
             </li>
             <li class="nav-item ps-5 pe-2">
               <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
@@ -144,7 +144,7 @@
     <div class="about-page-container">
       <div class="row align-items-center">
         <div class="col about-pic" style="text-align: center">
-          <img class="rounded " id="about-pic" src="..\images\about-photo.jpg" alt="about-pic">
+          <img class="rounded " id="about-pic" src="images\about-photo.jpg" alt="about-pic">
         </div>
         <div class="col px-5">
           <h2>MALAV PANCHAL</h2>
@@ -173,7 +173,7 @@
         </div>
       </div>
       <div class="col img-fluid" style="text-align: right" ;>
-        <img class="value-pic" src="..\images\value.jpg" alt="value-pic">
+        <img class="value-pic" src="images\value.jpg" alt="value-pic">
       </div>
     </div>
   </div>
