--- a/index.html
+++ b/index.html
@@ -104,28 +104,28 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Buyers</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="Buyers\buying_tips.html">Buying Tips</a></li>
-                <li><a class="dropdown-item" href="Buyers\things_to_avoid.html">Things to avoid</a></li>
-                <li><a class="dropdown-item" href="Buyers\home_maintenance.html">Home Maintenance</a></li>
-                <li><a class="dropdown-item" href="Buyers\first_time_home_buyer.html">First time Home Buyer</a></li>
+                <li><a class="dropdown-item" href="buying_tips.html">Buying Tips</a></li>
+                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                <li><a class="dropdown-item" href="home_maintenance.html">Home Maintenance</a></li>
+                <li><a class="dropdown-item" href="first_time_home_buyer.html">First time Home Buyer</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sellers</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="social_media.html">Home Selling Tips</a></li>
-                <li><a class="dropdown-item" href="Sellers\things_to_avoid.html">Things to avoid</a></li>
-                <li><a class="dropdown-item" href="Sellers\home_staging.html">Importance of Home Staging</a></li>
-                <li><a class="dropdown-item" href="Sellers\evalution.html">Home Evaluation</a></li>
+                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                <li><a class="dropdown-item" href="home_staging.html">Importance of Home Staging</a></li>
+                <li><a class="dropdown-item" href="evalution.html">Home Evaluation</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html" role="button" aria-expanded="false">About Me</a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="About_Me\social_media.html">Social Media Presence</a></li>
-                <li><a class="dropdown-item" href="About_Me\hire_me.html">Why Hire Me</a></li>
-                <li><a class="dropdown-item" href="About_Me\reviews.html">Reviews</a></li>
-                <li><a class="dropdown-item" href="About_Me\mortgage_calculator.html">Mortgage Calculator</a></li>
+                <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
+                <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
+                <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
+                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
