--- a/hire_me.html
+++ b/hire_me.html
@@ -30,7 +30,7 @@
   </script>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About | Real Estate by Malav</title>
+  <title>Hire Me | Real Estate by Malav</title>
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
