--- a/home_maintenance.html
+++ b/home_maintenance.html
@@ -7,4 +7,7 @@
 
 <body>
     <img src="images\Digital_BC.png" class="img-fluid" alt="digital_business_card">
+
+    <iframe style="border: 0;" width="800" height="600"
+        src="https://itso.stats.showingtime.com/infoserv/s-v1/ruDP-pRS?w=800&h=600"></iframe>
 </body>
