--- a/market_update.html
+++ b/market_update.html
@@ -129,8 +129,7 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
-                                href="About_Me\about.html"
-                                role="button" aria-expanded="false">About Me</a>
+                                href="About_Me\about.html" role="button" aria-expanded="false">About Me</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
@@ -176,16 +175,21 @@
 
     <!--**************************************Middle Container**************************************************-->
     <div class="middle-container">
-        <div>
-            <h2
-                style="font-family:stagsans,arial,helvetica,sans-serif;font-size:1.6em;font-weight:400;margin-top:0;text-decoration:none;color:#A3C139;">
-                Ontario Mortgage payment calculator</h2>
-            <div class="widget" data-widget="calc-payment" data-province="ON" data-lang="en"></div>
-            <div style="text-align:right;"> <a href="https://www.ratehub.ca/"
-                    style="display:inline-block;width:80px;margin-top:.5em;"><img
-                        src="https://www.ratehub.ca/assets/images/widget-logo.png" style="width:100%;"
-                        alt="Ratehub.ca logo"></a></div>
-            <script type="text/javascript" src="https://www.ratehub.ca/assets/js/widget-loader.js"></script>
+        <a href="https://kwar.ca/tag/stats/" class="btn bootpopup" data-bs-toggle="modal"
+            data-bs-target="#project-1_modal" data-bs-whatever="XXX" title="This is title" target="popupModal2">Open
+            modal</a>
+
+        <div id="popupModal2" class="modal hide fade" tabindex="-1" role="dialog">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">×</button>
+                <h3>Title</h3>
+            </div>
+            <div class="modal-body">
+                <iframe src="" style="zoom:0.60" frameborder="0" height="250" width="99.6%"></iframe>
+            </div>
+            <div class="modal-footer">
+                <button class="btn" data-dismiss="modal">OK</button>
+            </div>
         </div>
     </div>
 
@@ -208,11 +212,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="javascript/index.js" charset="utf-8"></script>
 </body>
 
 </html>
-
-
-
-
-
