--- a/buying_tips.html
+++ b/buying_tips.html
@@ -165,11 +165,20 @@
         </div>
       </div>
     </nav>
+
+    <div class="img-banner-fluid col-12">
+      <div class="maintxt">
+        Your dream home awaits you.
+      </div>
+    </div>
+    </div>
   </div>
 
 
   <!--**************************************Middle Container**************************************************-->
   <div class="middle-container">
+
+    
 
     
   </div>
