--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
       </div>
     </nav>
 
-    <div class="img-banner-fluid col-lg-12">
+    <div class="img-banner-fluid col-12">
       <div class="maintxt">
         Your dream home awaits you.
       </div>
