--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -170,7 +170,7 @@
             </div>
         </nav>
 
-        <header class="masthead" style="background-image: url('../Realtor-website/images/CT_exterior_9_web.jpg')">
+        <header class="masthead" style="background-image: url('images/CT_exterior_9_web.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-11 col-lg-9 col-xl-8">
@@ -250,7 +250,7 @@
                             delicate, that if you touched it with a finger it would crumble and fall apart. Seeing this
                             has to change
                             a man.</p>
-                        <a href="#!"><img class="img-fluid" src="../Realtor-website/images/invest.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="images/invest.jpg" alt="..." /></a>
                         <span class="caption text-muted">To go places and do things that have never been done before –
                             that’s what
                             living is all about.</span>
