--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </div>
       </div>
     </nav>
-    <header class="masthead" style="background-image: url('images/CT_exterior_9_web.jpg')">
+    <header class="masthead index-banner" style="background-image: url('images/CT_exterior_9_web.jpg')">
       <div class="container position-relative px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-11 col-lg-9 col-xl-8">
