correct active tag

--- a/reviews.html
+++ b/reviews.html
@@ -106,10 +106,10 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button"
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-expanded="false">Buyers</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item active" href="buying_tips.html">Buying Tips</a></li>
+                                <li><a class="dropdown-item" href="buying_tips.html">Buying Tips</a></li>
                                 <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
                                 <li><a class="dropdown-item" href="home_maintenance.html">Home Maintenance</a></li>
                                 <li><a class="dropdown-item" href="first_time_home_buyer.html">First time Home Buyer</a>
@@ -128,12 +128,13 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html"
+                            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
+                                href="About_Me\about.html"
                                 role="button" aria-expanded="false">About Me</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
-                                <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
+                                <li><a class="dropdown-item active" href="reviews.html">Reviews</a></li>
                                 <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
                                 </li>
                                 <li>
