--- a/home_Selling_tips.html
+++ b/home_Selling_tips.html
@@ -106,10 +106,10 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button"
+                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-expanded="false">Buyers</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item active" href="buying_tips.html">Buying Tips</a></li>
+                                <li><a class="dropdown-item" href="buying_tips.html">Buying Tips</a></li>
                                 <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
                                 <li><a class="dropdown-item" href="home_maintenance.html">Home Maintenance</a></li>
                                 <li><a class="dropdown-item" href="first_time_home_buyer.html">First time Home Buyer</a>
@@ -117,10 +117,11 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-expanded="false">Sellers</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="home_Selling_tips.html">Home Selling Tips</a></li>
+                                <li><a class="dropdown-item active" href="home_Selling_tips.html">Home Selling Tips</a>
+                                </li>
                                 <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
                                 <li><a class="dropdown-item" href="home_staging.html">Importance of Home Staging</a>
                                 </li>
