--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -117,11 +117,11 @@
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button"
                                 aria-expanded="false">Sellers</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="home_Selling_tips.html">Home Selling Tips</a></li>
-                                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                                <li><a class="dropdown-item active" href="things_to_avoid.html">Things to avoid</a></li>
                                 <li><a class="dropdown-item" href="home_staging.html">Importance of Home Staging</a>
                                 </li>
                                 <li><a class="dropdown-item" href="evalution.html">Home Evaluation</a></li>
