about me nav bar

--- a/hire_me.html
+++ b/hire_me.html
@@ -90,7 +90,8 @@
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
           <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -99,14 +100,43 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="about.html">About</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false">Buyers</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="buying_tips.html">Buying Tips</a></li>
+                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                <li><a class="dropdown-item" href="home_maintenance.html">Home Maintenance</a></li>
+                <li><a class="dropdown-item" href="first_time_home_buyer.html">First time Home Buyer</a>
+                </li>
+              </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="services.html">Services</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false">Sellers</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="home_Selling_tips.html">Home Selling Tips</a>
+                </li>
+                <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
+                <li><a class="dropdown-item" href="home_staging.html">Importance of Home Staging</a>
+                </li>
+                <li><a class="dropdown-item" href="evalution.html">Home Evaluation</a></li>
+              </ul>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="social_media.html">Social Media</a>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="About_Me\about.html"
+                role="button" aria-expanded="false">About Me</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
+                <li><a class="dropdown-item active" href="hire_me.html">Why Hire Me</a></li>
+                <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
+                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
+                </li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact Us</a>
@@ -126,7 +156,8 @@
                   <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
                 </div>
                 <div class="col p-0 mx-0">
-                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA" class="fa fa-whatsapp"></a>
+                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA"
+                    class="fa fa-whatsapp"></a>
                 </div>
               </div>
             </li>
