--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-11 col-lg-9 col-xl-8">
             <div class="maintxt post-heading">
-              <h1>Helping you get more for your Real Estate!</h1>
+              <h1 style="font-family: 'Kaushan Script', cursive; text-align: center;">Helping you get more for your Real Estate!</h1>
             </div>
           </div>
         </div>
