--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -267,6 +267,17 @@
                             &middot; Images by
                             <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
                         </p>
+
+                        <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
+                        <iframe style="border: 0;" width="800" height="600"
+                            src="https://itso.stats.showingtime.com/infoserv/s-v1/rr6M-JHO?w=800&h=600"></iframe>
+
+                        <iframe style="border: 0;" width="640" height="480"
+                            src="https://itso.stats.showingtime.com/infoserv/s-v1/rr6J-5hE?w=640&h=480"></iframe>
+
+                        <iframe style="border: 0;" width="400" height="300"
+                            src="https://itso.stats.showingtime.com/infoserv/s-v1/rr6J-5hE.HTML?w=400&h=300"></iframe>
+                            
                     </div>
                 </div>
             </div>
