--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -275,8 +275,8 @@
                         <iframe style="border: 0;" width="640" height="480"
                             src="https://itso.stats.showingtime.com/infoserv/s-v1/rr6J-5hE?w=640&h=480"></iframe>
 
-                        <iframe style="border: 0;" width="400" height="300"
-                            src="https://itso.stats.showingtime.com/infoserv/s-v1/rr6J-5hE.HTML?w=400&h=300"></iframe>
+                        <iframe style="border: 0;" width="390" height="844"
+                            src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=390&h=844"></iframe>
 
                     </div>
                 </div>
