--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -279,11 +279,11 @@
             <iframe style="border: 0;" width="640" height="480"
                 src="https://itso.stats.showingtime.com/infoserv/s-v1/rr6J-5hE?w=640&h=480"></iframe> -->
 
-            <iframe style="border: 0;" width="390" height="844"
-                src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=390&h=844"></iframe>
+            <iframe style="border: 0;" width="390" height="600"
+                src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=390&h=600"></iframe>
 
-            <iframe style="border: 0;" width="390" height="844"
-                src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpc-u1V?w=390&h=844"></iframe>
+            <iframe style="border: 0;" width="390" height="500"
+                src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpc-u1V.HTML?w=390&h=500"></iframe>
         </div>
     </div>
 
