added javascript for iframe

--- a/index.html
+++ b/index.html
@@ -34,13 +34,15 @@
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- This link is for google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap"
+    rel="stylesheet">
 
   <!-- This link is to use Social Media account logos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -67,14 +69,14 @@
     chatbox.setAttribute("page_id", "108068657814448");
     chatbox.setAttribute("attribution", "biz_inbox");
 
-    window.fbAsyncInit = function() {
+    window.fbAsyncInit = function () {
       FB.init({
         xfbml: true,
         version: 'v11.0'
       });
     };
 
-    (function(d, s, id) {
+    (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s);
@@ -92,7 +94,8 @@
         <a class="navbar-brand d-flex justify-content-lg-start ps-5" href="index.html">
           <img src="images\Malav_Logo.png" alt="logo" style="width:200px;">
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -102,7 +105,8 @@
               <a class="nav-link active" href="index.html">Home</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Buyers</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false">Buyers</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="buying_tips.html">Buying Tips</a></li>
                 <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
@@ -111,7 +115,8 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Sellers</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button"
+                aria-expanded="false">Sellers</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="home_Selling_tips.html">Home Selling Tips</a></li>
                 <li><a class="dropdown-item" href="things_to_avoid.html">Things to avoid</a></li>
@@ -120,7 +125,8 @@
               </ul>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html" role="button" aria-expanded="false">About Me</a>
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="About_Me\about.html" role="button"
+                aria-expanded="false">About Me</a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
@@ -150,7 +156,8 @@
                   <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
                 </div>
                 <div class="col p-0 mx-0">
-                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA" class="fa fa-whatsapp"></a>
+                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA"
+                    class="fa fa-whatsapp"></a>
                 </div>
               </div>
             </li>
@@ -163,7 +170,8 @@
         <div class="row gx-4 gx-lg-5 justify-content-center">
           <div class="col-md-11 col-lg-9 col-xl-8">
             <div class="maintxt post-heading">
-              <h1 style="font-family: 'Kaushan Script', cursive; text-align: center;">Helping you get more for your Real Estate!</h1>
+              <h1 style="font-family: 'Kaushan Script', cursive; text-align: center;">Helping you get more for your Real
+                Estate!</h1>
             </div>
           </div>
         </div>
@@ -177,13 +185,15 @@
     <div class="profile" id="profile">
       <img src="images\Malav-circle.png" alt="profile-pic">
       <h2>Meet Malav</h2>
-      <p class="index-meet-text">An industrious REALTOR® who enjoys interacting with others, I take the time to forge honest, meaningful relationships with my clients.</p>
+      <p class="index-meet-text">An industrious REALTOR® who enjoys interacting with others, I take the time to forge
+        honest, meaningful relationships with my clients.</p>
     </div>
     <div class="social" id="social">
       <h2>Check out my Instagram</h2>
       <a href="https://www.instagram.com/realtor_malav/" class="instagram" id="instagram">@realtor_malav</a>
       <!-- Place <div> tag where you want the feed to appear -->
-      <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div>
+      <div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank"
+          class="crt-logo crt-tag">Powered by Curator.io</a></div>
       <a href="social_media.html" class="explore_social" id="explore_social">Explore more Social Media</a>
     </div>
   </div>
@@ -272,7 +282,7 @@
   <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
   <script type="text/javascript">
     /* curator-feed-default-feed-layout */
-    (function() {
+    (function () {
       var i, e, d = document,
         s = "script";
       i = d.createElement("script");
@@ -283,7 +293,10 @@
     })();
   </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </body>
 
 </html>
