--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -193,7 +193,7 @@
         <article class="mb-4">
             <div class="container px-5 px-lg-6">
                 <div class="row gx-8 gx-lg-9 justify-content-center">
-                    <div class="blog-p col-md-11 col-lg-9 col-xl-8">
+                    <div id="blog-p" class="blog-p col-md-11 col-lg-9 col-xl-8">
                         <p>Never in all their history have men been able truly to conceive of the world as one: a single
                             sphere, a
                             globe, having the qualities of a globe, a round earth in which all the directions eventually
@@ -279,9 +279,9 @@
                                     src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=640&h=480"></iframe>
                             </div> -->
 
-                            <div class="small-stat d-flex justify-content-center .d-none ">
-                                <iframe style="border: 0;" width="380" height="500"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=380&h=500"></iframe>
+                            <div class="sale-price-stat d-flex justify-content-center .d-none ">
+                                <iframe id="stat-iframe" style="border: 0;" width="350" height="500"
+                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=350&h=500"></iframe>
                             </div>
                         </div>
                     </div>
@@ -312,6 +312,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="javascript\index.js" charset="utf-8"></script>
 </body>
 
 </html>
