added service page

--- a/hire_me.html
+++ b/hire_me.html
@@ -34,13 +34,15 @@
   <link rel="icon" href="images\Malav.ico">
 
   <!-- Bootstrap 5 CSS link -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
   <!-- This link is for google fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=PT+Serif&family=Sacramento&family=Slabo+27px&display=swap"
+    rel="stylesheet">
 
   <!-- This link is to use Social Media account logos -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -66,14 +68,14 @@
     chatbox.setAttribute("page_id", "108068657814448");
     chatbox.setAttribute("attribution", "biz_inbox");
 
-    window.fbAsyncInit = function() {
+    window.fbAsyncInit = function () {
       FB.init({
         xfbml: true,
         version: 'v11.0'
       });
     };
 
-    (function(d, s, id) {
+    (function (d, s, id) {
       var js, fjs = d.getElementsByTagName(s)[0];
       if (d.getElementById(id)) return;
       js = d.createElement(s);
@@ -131,36 +133,37 @@
                 <li><a class="dropdown-item active" href="hire_me.html">Why Hire Me</a></li>
                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
                 <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
-                </li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
-              </ul>
+                <li><a class="dropdown-item" href="services.html">Services</a></li>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact Us</a>
+            <li>
+              <hr class="dropdown-divider">
             </li>
-            <li class="nav-item ps-5 pe-2">
-              <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
-            </li>
-            <li class="nav-item ps-3 pe-3">
-              <div class="row d-sm-inline-flex">
-                <div class="col p-0 mx-0">
-                  <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
-                </div>
-                <div class="col p-0 mx-0">
-                  <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
-                </div>
-                <div class="col p-0 mx-0">
-                  <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
-                </div>
-                <div class="col p-0 mx-0">
-                  <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA"
-                    class="fa fa-whatsapp"></a>
-                </div>
+            <li><a class="dropdown-item" href="market_update.html">Market Update</a></li>
+          </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="contact.html">Contact Us</a>
+          </li>
+          <li class="nav-item ps-5 pe-2">
+            <a class="nav-link nav-phone" href="tel:+16477084395">647-708-4395</a>
+          </li>
+          <li class="nav-item ps-3 pe-3">
+            <div class="row d-sm-inline-flex">
+              <div class="col p-0 mx-0">
+                <a href="https://www.facebook.com/realtormalav/" class="fa fa-facebook"></a>
               </div>
-            </li>
+              <div class="col p-0 mx-0">
+                <a href="mailto:realtor.malav@gmail.com" class="fa fa-envelope"></a>
+              </div>
+              <div class="col p-0 mx-0">
+                <a href="https://www.instagram.com/realtor_malav/" class="fa fa-instagram"></a>
+              </div>
+              <div class="col p-0 mx-0">
+                <a href="https://api.whatsapp.com/send?phone=16477084395&fbclid=IwAR2XTAOAlZdwc0sTbDoxU7Dr_Fnbr5B_zatjztiW1S6z01JpPQ6BpVzjFMA"
+                  class="fa fa-whatsapp"></a>
+              </div>
+            </div>
+          </li>
           </ul>
         </div>
       </div>
@@ -181,10 +184,14 @@
           <h2>MALAV PANCHAL</h2>
           <h3>REALTOR®</h3>
           <p class="about-text" id="about-text">
-            An industrious REALTOR® who enjoys interacting with others, Malav takes the time to forge honest, meaningful relationships with his clients.
-            Through frequent communication and clarification of industry terms and procedures, he strives to ensure they are fully informed and understand all aspects of any purchase or sale.<br><br>
-            Malav studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging and assisting new students.
-            He went on to work in the Software industry as a Quality Assurance Engineer. This developed his troubleshooting skills and taught him the importance of attention to detail in every task,
+            An industrious REALTOR® who enjoys interacting with others, Malav takes the time to forge honest, meaningful
+            relationships with his clients.
+            Through frequent communication and clarification of industry terms and procedures, he strives to ensure they
+            are fully informed and understand all aspects of any purchase or sale.<br><br>
+            Malav studied Electronic Engineering. During his time, he volunteered as an Orientation Leader, encouraging
+            and assisting new students.
+            He went on to work in the Software industry as a Quality Assurance Engineer. This developed his
+            troubleshooting skills and taught him the importance of attention to detail in every task,
             valuable experience he brings with him to his exciting journey as a REALTOR.<br><br>
             Malav is proficient in both spoken and written English, Gujarati and Hindi.</p>
         </div>
@@ -199,8 +206,10 @@
         <div class="value-heading">
           <h3 style="color:#fff;">My Values</h3>
           <h2 style="color:#fff;">Integrity & Trust</h2>
-          <p class="value-text" id="value-text">I work with my full & undivided attention to truly understand and ensure their needs are being met from the start.<br><br>
-            The fundamental core of any professional relationship is trust. It is important to me that my clients feel that I have their best intentions always in mind.</p>
+          <p class="value-text" id="value-text">I work with my full & undivided attention to truly understand and ensure
+            their needs are being met from the start.<br><br>
+            The fundamental core of any professional relationship is trust. It is important to me that my clients feel
+            that I have their best intentions always in mind.</p>
         </div>
       </div>
       <div class="col img-fluid" style="text-align: right" ;>
@@ -227,7 +236,7 @@
   <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
   <script type="text/javascript">
     /* curator-feed-default-feed-layout */
-    (function() {
+    (function () {
       var i, e, d = document,
         s = "script";
       i = d.createElement("script");
@@ -238,7 +247,9 @@
     })();
   </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+  </script>
 </body>
 
 </html>
