--- a/things_to_avoid.html
+++ b/things_to_avoid.html
@@ -135,10 +135,11 @@
                                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
                                 <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
                                 </li>
+                                <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
+                                <li><a class="dropdown-item" href="market_update.html">Market Update</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -269,16 +270,6 @@
                         </p>
                         <div class="stats">
                             <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
-                            <!-- <div class="large-stat d-flex justify-content-center .d-none">
-                                <iframe style="border: 0;" width="800" height="600"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=800&h=600"></iframe>
-                            </div>
-
-                            <div class="medium-stat d-flex justify-content-center .d-none">
-                                <iframe style="border: 0;" width="640" height="480"
-                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=640&h=480"></iframe>
-                            </div> -->
-
                             <div class="sale-price-stat d-flex justify-content-center .d-none ">
                                 <iframe id="stat-iframe" style="border: 0;" width="350" height="500"
                                     src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=350&h=500"></iframe>
@@ -287,8 +278,6 @@
                     </div>
                 </div>
             </div>
-
-
         </article>
     </div>
 
