--- a/evalution.html
+++ b/evalution.html
@@ -135,11 +135,13 @@
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
                                 <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
+                                    
                                 </li>
+                                <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
+                                <li><a class="dropdown-item" href="market_update.html">Market Update</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
