--- a/index.html
+++ b/index.html
@@ -132,10 +132,11 @@
                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
                 <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a></li>
+                <li><a class="dropdown-item" href="services.html">Services</a></li>
                 <li>
                   <hr class="dropdown-divider">
                 </li>
-                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
+                <li><a class="dropdown-item" href="market_update.html">Market Update</a></li>
               </ul>
             </li>
             <li class="nav-item">
@@ -293,10 +294,11 @@
     })();
   </script>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
-  </script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+   integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+ </script>
+ <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+ <script src="javascript\index.js" charset="utf-8"></script>
 </body>
 
 </html>
