--- a/mortgage_calculator.html
+++ b/mortgage_calculator.html
@@ -129,19 +129,18 @@
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown"
-                                href="About_Me\about.html"
-                                role="button" aria-expanded="false">About Me</a>
+                                href="About_Me\about.html" role="button" aria-expanded="false">About Me</a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
                                 <li><a class="dropdown-item active" href="mortgage_calculator.html">Mortgage
-                                        Calculator</a>
-                                </li>
+                                        Calculator</a></li>
+                                <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
-                                <li><a class="dropdown-item" href="https://kwar.ca/tag/stats/">Market Update</a></li>
+                                <li><a class="dropdown-item" href="market_update.html">Market Update</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -211,8 +210,3 @@
 </body>
 
 </html>
-
-
-
-
-
