--- a/home_Selling_tips.html
+++ b/home_Selling_tips.html
@@ -135,9 +135,8 @@
                                 <li><a class="dropdown-item" href="social_media.html">Social Media Presence</a></li>
                                 <li><a class="dropdown-item" href="hire_me.html">Why Hire Me</a></li>
                                 <li><a class="dropdown-item" href="reviews.html">Reviews</a></li>
-                                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a>
-                                    <li><a class="dropdown-item" href="services.html">Services</a></li>
-                                </li>
+                                <li><a class="dropdown-item" href="mortgage_calculator.html">Mortgage Calculator</a></li>
+                                <li><a class="dropdown-item" href="services.html">Services</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
