4 kind of graphs

--- a/market_update.html
+++ b/market_update.html
@@ -272,11 +272,32 @@
                         </p>
                         <div class="stats">
                             <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
-                            <div class="sale-price-stat d-flex justify-content-center .d-none ">
-                                <iframe id="stat-iframe" style="border: 0;" width="350" height="500"
+                            <div class="d-flex justify-content-center .d-none ">
+                                <iframe id="sale-price" style="border: 0;" width="350" height="500"
                                     src="https://itso.stats.showingtime.com/infoserv/s-v1/rrpI-sEa?w=350&h=500"></iframe>
                             </div>
                         </div>
+                        <div class="stats">
+                            <h2 class="section-heading">Kitchener-Waterloo Monthly Supply</h2>
+                            <div class="d-flex justify-content-center .d-none ">
+                                <iframe id="home-for-sale" style="border: 0;" width="350" height="500"
+                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/raMi-rOq?w=350&h=500"></iframe>
+                            </div>
+                        </div>
+                        <div class="stats">
+                            <h2 class="section-heading">Kitchener-Waterloo Monthly Sold</h2>
+                            <div class="d-flex justify-content-center .d-none ">
+                                <iframe id="sold-stat" style="border: 0;" width="350" height="500"
+                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/raiv-hp3?w=350&h=500"></iframe>
+                            </div>
+                        </div>
+                        <div class="stats">
+                            <h2 class="section-heading">Kitchener-Waterloo Days on Market</h2>
+                            <div class="d-flex justify-content-center .d-none ">
+                                <iframe id="days-on-market" style="border: 0;" width="640" height="480"
+                                    src="https://itso.stats.showingtime.com/infoserv/s-v1/raJZ-lYT?w=640&h=480"></iframe>
+                            </div>
+                        </div>                        
                     </div>
                 </div>
             </div>
