--- a/market_update.html
+++ b/market_update.html
@@ -270,6 +270,7 @@
                             &middot; Images by
                             <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
                         </p>
+                        
                         <div class="stats">
                             <h2 class="section-heading">Kitchener-Waterloo Median Sale Price</h2>
                             <div class="d-flex justify-content-center .d-none ">
@@ -297,7 +298,15 @@
                                 <iframe id="days-on-market" style="border: 0;" width="640" height="480"
                                     src="https://itso.stats.showingtime.com/infoserv/s-v1/raJZ-lYT?w=640&h=480"></iframe>
                             </div>
-                        </div>                        
+                        </div>
+                        <div class="stats">
+                            <h2 class="section-heading">More Stats from KWAR</h2>
+                            <div class="d-flex justify-content-center .d-none ">
+                                <iframe id="kwar-stat" id="home-for-sale" scrolling="yes" style="border: 0;" width="350"
+                                    height="500" src="https://kwar.ca/tag/stats/"></iframe>
+                            </div>
+                        </div>
+                                             
                     </div>
                 </div>
             </div>
