--- a/market_update.html
+++ b/market_update.html
@@ -172,7 +172,7 @@
             </div>
         </nav>
 
-        <header class="masthead" style="background-image: url('images/invest.jpg')">
+        <header class="masthead" style="background-image: url('images/market-update.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-11 col-lg-9 col-xl-8">
@@ -312,6 +312,15 @@
             </div>
         </article>
     </div>
+
+    <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/shell.js"></script>
+    <script>
+        hbspt.forms.create({
+            region: "na1",
+            portalId: "20507752",
+            formId: "a5875a54-a632-4876-a440-cbb5711fa96c"
+        });
+    </script>
 
 
 
