--- a/market_update.html
+++ b/market_update.html
@@ -172,7 +172,7 @@
             </div>
         </nav>
 
-        <header class="masthead" style="background-image: url('images/market-update.jpg')">
+        <header class="masthead" style="background-image: url('images/invest.jpg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-11 col-lg-9 col-xl-8">
